[package]
name = "plotter"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
cairo-rs = { version = "0.20.1", features = ["svg"] }
# gdk = { version = "0.9.2", package = "gdk4" }
# gio = "0.20.4"
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"] }
rand = "0.8.5"
relm4 = { version = "0.9.0", features = ["libadwaita", "gnome_46"] }
relm4-components = { version = "0.9.1", features = ["libadwaita"] }
relm4-icons = "0.9.0"
